[gd_scene load_steps=5 format=3 uid="uid://dnt11kb0s0x21"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_aypmk"]
[ext_resource type="Texture2D" uid="uid://btdkhl225tn62" path="res://Resources/Textures/gamescreen-pause.png" id="1_x43kt"]
[ext_resource type="FontFile" uid="uid://b2r7cala357u6" path="res://Resources/Fonts/Bell MT.ttf" id="2_pxmtk"]
[ext_resource type="Texture2D" uid="uid://ygt2pxfllt4x" path="res://Resources/Textures/Controlls.png" id="3_3fem6"]

[node name="PauseMenu" type="Node2D"]
script = ExtResource("1_aypmk")

[node name="MenuView" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite2D" type="Sprite2D" parent="MenuView"]
position = Vector2(960, 540)
texture = ExtResource("1_x43kt")

[node name="MarginContainer" type="MarginContainer" parent="MenuView"]
layout_mode = 0
offset_left = 818.0
offset_top = 394.0
offset_right = 1103.0
offset_bottom = 561.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuView/MarginContainer"]
layout_mode = 2

[node name="Weiter" type="Button" parent="MenuView/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pxmtk")
theme_override_font_sizes/font_size = 40
text = "Weiter"

[node name="Steuerung" type="Button" parent="MenuView/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pxmtk")
theme_override_font_sizes/font_size = 40
text = "Steuerung"

[node name="Hauptmenu" type="Button" parent="MenuView/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pxmtk")
theme_override_font_sizes/font_size = 40
text = "Zum Hauptmenü"

[node name="ControllsView" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite2D" type="Sprite2D" parent="ControllsView"]
position = Vector2(960, 540)
texture = ExtResource("3_3fem6")

[node name="Zurück" type="Button" parent="ControllsView"]
layout_mode = 0
offset_left = 896.0
offset_top = 896.0
offset_right = 1023.0
offset_bottom = 949.0
theme_override_fonts/font = ExtResource("2_pxmtk")
theme_override_font_sizes/font_size = 40
text = "Zurück"

[connection signal="pressed" from="MenuView/MarginContainer/VBoxContainer/Weiter" to="." method="_on_weiter_pressed"]
[connection signal="pressed" from="MenuView/MarginContainer/VBoxContainer/Steuerung" to="." method="_on_steuerung_pressed"]
[connection signal="pressed" from="MenuView/MarginContainer/VBoxContainer/Hauptmenu" to="." method="_on_hauptmenu_pressed"]
[connection signal="pressed" from="ControllsView/Zurück" to="." method="_on_zurück_pressed"]
